objects/Dispatch__c.object
<CustomObject>
    <description>Used to post data to external systems</description>
    <fields>
        <fullName>Execution_Mode__c</fullName>
        <description>Should the requests be sent in parallel or in serial mode?</description>
        <inlineHelpText>Should the requests be sent in parallel or in serial mode?</inlineHelpText>
        <label>Execution Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dispatch_Execution_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <defaultValue>&apos;{&quot;Content-Type&quot;: &quot;application/json&quot;}&apos;</defaultValue>
        <description>The Request headers in JSON format.</description>
        <inlineHelpText>The Request headers in JSON format.</inlineHelpText>
        <label>Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the webhook.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dispatch_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Dispatch</label>
    <nameField>
        <displayFormat>WH-{0000000000}</displayFormat>
        <label>Dispatch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispatch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>